<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/kalkulator_jarak_euclidean"
            app:titleCentered="true"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/masukkan_jumlah_titik"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_jumlah_titik"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:id="@+id/et_jumlah_titik"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLength="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                app:layout_constraintTop_toBottomOf="@id/layout_jumlah_titik"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>